--- a/static/typography.css
+++ b/static/typography.css
@@ -72,7 +72,6 @@ a {
 /* Footer */
 #footer-title {
     padding: 5px 0;
-    margin-bottom: 0.5em;
     min-width: 100%;
     color: #ffffff;
     font-family: "Montserrat", sans-serif;
